--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
-  <head>
+<head>
   <!-- 
     Flipnote-Player v<%= process.env.__VERSION__ %>
     Web player for animations created with Flipnote Studio and Flipnote Studio 3D
@@ -15,28 +15,30 @@
     Kaeru Team (testing help)
     Sudomemo (sample flipnotes)
   -->
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%= process.env.POI_APP_TITLE %></title>
-    <meta name="application-name" content="<%= process.env.POI_APP_TITLE  %>">
-    <meta name="description" content="<%= process.env.POI_APP_DESCRIPTION %>">
-    <meta property="og:url" content="<%= process.env.POI_APP_URL %>">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="<%= process.env.POI_APP_TITLE %>">
-    <meta property="og:image" content="<%= process.env.POI_APP_SOCIAL_IMAGE_URL %>">
-    <meta property="og:image:width" content="<%= process.env.POI_APP_SOCIAL_IMAGE_WIDTH %>">
-    <meta property="og:image:height" content="<%= process.env.POI_APP_SOCIAL_IMAGE_HEIGHT %>">
-    <meta property="og:description" content="<%= process.env.POI_APP_DESCRIPTION %>">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="<%= process.env.POI_APP_CREATOR_TWITTER %>">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <script async defer data-domain="flipnote.rakujira.jp" src="https://plausible.io/js/plausible.js"></script>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-  </body>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>
+    <%= process.env.POI_APP_TITLE %>
+  </title>
+  <meta name="application-name" content="<%= process.env.POI_APP_TITLE  %>">
+  <meta name="description" content="<%= process.env.POI_APP_DESCRIPTION %>">
+  <meta property="og:url" content="<%= process.env.POI_APP_URL %>">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="<%= process.env.POI_APP_TITLE %>">
+  <meta property="og:image" content="<%= process.env.POI_APP_SOCIAL_IMAGE_URL %>">
+  <meta property="og:image:width" content="<%= process.env.POI_APP_SOCIAL_IMAGE_WIDTH %>">
+  <meta property="og:image:height" content="<%= process.env.POI_APP_SOCIAL_IMAGE_HEIGHT %>">
+  <meta property="og:description" content="<%= process.env.POI_APP_DESCRIPTION %>">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator" content="<%= process.env.POI_APP_CREATOR_TWITTER %>">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <script async defer data-domain="flipnote.rakujira.jp" src="https://plausible.io/js/plausible.js"></script>
+</head>
+<body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root"></div>
+</body>
 </html>
